fix: z-index navbar

--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -9,7 +9,7 @@
     }
 
     header {
-        @apply fixed top-0 left-0 right-0 z-10 w-full;
+        @apply fixed top-0 left-0 right-0 z-[9999] w-full;
         @apply h-[var(--header-height)] min-h-[var(--header-height)] max-h-[var(--header-height)];
     }
 
